# WorldMM

./: .gitignore  README.md  WORLDMM_DATA_STRUCTURE.md  build_memory.sh  eval.sh  output.txt  process_memory.py  pyproject.toml  reason.py  run_daily_pipeline.sh
data/EgoLife/EgoLifeQA/: EgoLifeQA_A1_JAKE.json  EgoLifeQA_A1_JAKE_DAY1.json  EgoLifeQA_A1_JAKE_DAY2.json  EgoLifeQA_A1_JAKE_DAY3.json  EgoLifeQA_A1_JAKE_DAY4.json  EgoLifeQA_A1_JAKE_DAY5.json  EgoLifeQA_A1_JAKE_DAY6.json  EgoLifeQA_A1_JAKE_DAY7.json
data/EgoLife/utils/: generate_sync.py  translate_densecap.py
eval/: eval.py  eval_one_day.py
hipporag/: HippoRAG.py  StandardRAG.py  rerank.py
hipporag/prompts/: __init__.py
hipporag/utils/: qa_utils.py
preprocess/episodic_memory/: extract_episodic_triples.py  generate_fine_caption.py
preprocess/semantic_memory/: consolidate_semantic_memory.py  extract_semantic_triples.py
preprocess/visual_memory/: extract_visual_features.py  extract_visual_features.sh
script/: 1_setup.sh  2_preprocess.sh  3_build_memory.sh  4_eval.sh
src/EgoRAG/: pyproject.toml
src/EgoRAG/egorag/agents/: RagAgent.py
src/EgoRAG/egorag/database/: Chroma.py
src/EgoRAG/egorag/utils/: agent_fun.py  gen_event.py  util.py
src/worldmm/: llm.py  mllm.py
src/worldmm/embedding/: embedding_wrapper.py  gpt_embedding.py  vlm2vecv2.py
src/worldmm/llm/: llm_wrapper.py  openai_gpt.py  token_monitor.py
src/worldmm/memory/: memory.py
worldmm/: llm.py
worldmm/embedding/: embedding_wrapper.py  gpt_embedding.py
worldmm/memory/: memory.py
worldmm/templates/: triple_extraction.py
(+983 files in other folders)
