[tool.black]
line-length = 240

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "egorag"
version = "0.1.0"
description = "A basic package for EgoRAG"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "chromadb",
    "openai",
    "open_clip_torch",
]
authors = [
    {name = "HongmingGuo", email = "ghm0221@bupt.edu.cn"}
]

[project.optional-dependencies]


[tool.setuptools.packages.find]
include = ["egorag*"]

[tool.wheel]
include = [ "model*"]
